Fix case insensitive diacritics mapping (#111)
And normalize case insensitive diacritics array

--- a/test/fixtures/basic/ignore-joiners-diacritics.html
+++ b/test/fixtures/basic/ignore-joiners-diacritics.html
@@ -7,8 +7,8 @@
         i&#8204;psům dolor sit ảmet, consetetur sadipscing elitr, sed diam nonumy
         eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
         voluptua. At vero eos et accusam et justó duo dolores et ea rebum. Stet clita
-        kasd gubergren, no sea takimata sanctus est łorem ipsum dołoř sit àmet.
-        Morbi convallis tellus non lacus tincidunt, eu luctus quam gravida. Donec sodales,
+        kasd gubergren, no sea takimata sanctus est łorem ipsum dołoř sit àmet. Morbi
+        convallis tellus non lacus tincidunt, eu luctus quam gravida. Donec sodales,
         arcu at sollicitudin rhoncus, sapien massa aliquam velit, vitae auctor massa
         libero quis łorem ipsum. Integer suscipit leo gravida luctus placerat. Integer
         dapibus placerat porttitor. Sed laoreet pellentesque ex quis porttitor. Nulla
