Ignore special characters in accuracy complementary (#116)
Closes #113

--- a/test/fixtures/basic/accuracy-complementary.html
+++ b/test/fixtures/basic/accuracy-complementary.html
@@ -9,6 +9,7 @@
             eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
             clita kasd gubergren, no sea takimata sanctus est ipsum dolor sit amet.
+            Et (ipsumx) dolor ipsumx-test öipsumxö.
         </p>
     </div>
     <div>
@@ -21,6 +22,7 @@
             eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
             voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
             clita kasd gubergren, no sea takimata sanctus est ipsum dolor sit amet.
+            Et (ipsumx) dolor.
         </p>
     </div>
 </div>
