Implement ignorePunctuation option (#135)
Closes ##119

--- a/test/fixtures/basic/ignore-joiners-synonyms.html
+++ b/test/fixtures/basic/ignore-joiners-synonyms.html
@@ -15,7 +15,8 @@
     <div>
         <p>
             Lorem ipsum on&shy;e, tw&#8203;o, do&#8205;s, three, dolor sit amet u&shy;no, consetetur.
-            Lorem ipsum Luefte dolor sit amet One Two Three lu&shy;efte.
+            Lorem ipsum L&#8203;ue&#8204;fte dolor sit l&shy;ü&#8205;fte amet One
+            T&#8203;wo Three lu&shy;efte.
         </p>
     </div>
 </div>
