Sort synonym array from longest to shortest

--- a/test/fixtures/basic/synonyms-array.html
+++ b/test/fixtures/basic/synonyms-array.html
@@ -21,4 +21,9 @@
       Lorem ipsum dolor sit amet door kasd.
     </p>
   </div>
+  <div>
+    <p>
+      be am is are was were being been have had has having
+    </p>
+  </div>
 </div>
