Fix infinite loop when using the unpublished separateGroups option (#318)

--- a/test/fixtures/regexp/separate-groups.html
+++ b/test/fixtures/regexp/separate-groups.html
@@ -15,4 +15,9 @@
       ignored (test-1w), {test-2x|lorem-3y} [ipsum-4z] test+ignored
     </p>
   </div>
+  <div>
+    <p>
+      ignored (test-1w), {test-2x|lorem-3y} [ipsum-4z] test+ignored
+    </p>
+  </div>
 </div>
