improvement of getTextNodesAcrossElements

--- a/test/fixtures/across-elements/regexp/count.html
+++ b/test/fixtures/across-elements/regexp/count.html
@@ -10,4 +10,11 @@
         takimata sanctus est Lorem ip<b>su</b>m dolor sit amet</p>
     <h2>Lorem ipsum</h2><h2>Lorem ipsum</h2>
     <p>Lorem<br>ipsum</p>
+    <ul>
+		<li>Lorem<div>ipsum</div></li>
+		<li>Lorem<div>ipsum</div><b>Lorem</b>ipsum</li>
+		<li>Lorem<div><b>ipsum</b></div>Lorem ipsum</li>
+		<li>Lorem<br>ipsum</li>
+    </ul>
 </div>
+
