Revamp of getTextNodesAcrossElements function

--- a/test/fixtures/across-elements/regexp/count.html
+++ b/test/fixtures/across-elements/regexp/count.html
@@ -1,20 +1,76 @@
 <div class="across-elements-count">
-    <h2>Lorem ipsum</h2><h2>Lorem ipsum<a href="https"></a></h2>
-    <p><b>L</b>orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est <b>Lorem</b> ipsum dolor sit. Lorem <b>ipsum</b> dolor sit
-        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem ip<b>su</b>m dolor sit amet</p>
-    <h2>Lorem ipsum</h2><h2>Lorem ipsum</h2>
-    <p>Lorem<br>ipsum</p>
+    <h2>Lorem ipsum</h2><p>Lorem ipsum</p>
+    <p><b>L</b>orem ipsum</p>
+    <p>Lorem ip<b>su</b>m</p>
     <ul>
-		<li>Lorem<div>ipsum</div></li>
-		<li>Lorem<div>ipsum</div><b>Lorem</b>ipsum</li>
-		<li>Lorem<div><b>ipsum</b></div>Lorem ipsum</li>
-		<li>Lorem<br>ipsum</li>
+        <li>Lorem<div>ipsum</div></li>
+        <li><b>Lorem<em> ipsum<em></b></li>
+        <li>Lorem<div>ipsum</div><b>Lorem</b>ipsum</li>
+        <li>Lorem<div><b>ipsum</b></div>Lorem ipsum</li>
+        <li>Lorem<br>ipsum</li>
+    </ul>
+
+    <h2>Lorem</h2>ipsum 
+    <b>Lorem</b> ipsum 
+    <h2>Lorem<a href="http://"></a></h2>ipsum 
+
+    <div>est <b>Lorem</b></div>ipsum 
+
+    <p><span>est <b>Lorem</b></span></p>ipsum 
+
+    <p><span>est <b>Lorem</b></span> ipsum</p>dolor 
+
+    <ul>
+        <h2>Lorem<span class="img"></span></h2><a href="http://">A</a><p>ipsum</p>
+        <li>Lorem<br>ipsum</li> 
+
+        <li>Lorem<span><b> ipsum</b></span></li> 
+
+        <li>Lorem<b> ipsum</b></li> 
+
+        <li>Lorem<span><b> ipsum</b></span></li> 
+
+        <li>Lorem<span class="img"></span> ipsum</li> 
+
+        <li>Lorem<span><b><span class="img"></span> ipsum</b></span></li> 
+
+        <li>Lorem<span><code></b> ipsum</b></code></span></li> 
+
+        <li>Lorem<span><b><p>ipsum</p></b></span></li> 
+
+        <li>Lorem<span><b><span class="img"></span><p>ipsum</p></b></span></li> 
     </ul>
 </div>
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
