checkNextNodes function & some polishing

--- a/test/fixtures/across-elements/regexp/count.html
+++ b/test/fixtures/across-elements/regexp/count.html
@@ -26,8 +26,6 @@
 
         <li>Lorem<span><b> ipsum</b></span></li> 
 
-        <li>Lorem<b> ipsum</b></li> 
-
         <li>Lorem<span><b> ipsum</b></span></li> 
 
         <li>Lorem<span class="img"></span> ipsum</li> 
@@ -39,38 +37,7 @@
         <li>Lorem<span><b><p>ipsum</p></b></span></li> 
 
         <li>Lorem<span><b><span class="img"></span><p>ipsum</p></b></span></li> 
+        
+        <li>Lorem<span><b><span class="img"></span><span class="img2"></span><p>ipsum</p></b></span></li> 
     </ul>
 </div>
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
