Change logic in findStartIndex methods, tests improvement, added manual test

--- a/test/fixtures/across-elements/regexp/separate-groups.html
+++ b/test/fixtures/across-elements/regexp/separate-groups.html
@@ -1,13 +1,13 @@
 
 <div class="across-elements-separate-groups">
-    <h2>Group1 text group2 text group3</h2><p>Group1 text group2</p>
+    <h2>Group1 text group2@ text group3</h2><p>Group1 text group2</p>
     <pre>Group1 text text group2
         Group1 text group2</pre>
     <p><b>Gr</b>oup1 text group2</p>
     <p>Gro<b>up1</b> text gr<b>ou</b>p2 text <b>gr</b>ou<b>p3</b></p>
+    <p>Group1 text group2@ text group3 text text group1 text group2 text group3</p>
     <ul>
         <li>Group1 text<div>group2</div></li>
-        <li><b>Group1<em> group2</em></b></li>
         <li>Group1<div>text group2</div><b>Group1</b>skip group2</li>
         <li>Group1<div>text <b>group2</b></div>Group1 text group2<div>text group3</div></li>
         <li>Group1<br>text<br>group2<p>group3</p></li>
@@ -27,15 +27,13 @@
 
         <li>Group1<span><b> skip</b>group2</span></li>
 
-        <li>Group1<b> text group2</b></li>
-
         <li>Group1<span> text<b> group2</b></span></li>
 
         <li>Group1<span class="img"></span> group2</li>
 
         <li>Group1 text<span><b><span class="img"></span> group2</b></span></li>
 
-        <li>Group1 text<span><code></b> group2</b></code></span> group3</li>
+        <li>Group1 text<span><code><b> group2</b></code></span> group3</li>
 
         <li>Group1 text<span><b><p>group2</p></b></span>group3</li>
 
