--- a/test/fixtures/across-elements/regexp/block-elements-boundary.html
+++ b/test/fixtures/across-elements/regexp/block-elements-boundary.html
@@ -6,6 +6,7 @@
     <p>block elements<br>boundary</p>
     <ul>
         <li>block<div>elements</div>boundary</li>
+        <li>block<custom>elements</custom>boundary</li>
         <li>block elements</li>
         <li>boundary</li>
     </ul>
