--- a/manual_test/manual_test_regexp_hasIndises.html
+++ b/manual_test/manual_test_regexp_hasIndises.html
@@ -17,15 +17,22 @@
   <script src="../dist/jquery.mark.js"></script>
 
   <script src="specs/separate-groups-hasIndices.js"></script>
-  <script src="specs/separate-groups.js"></script>
-  <script src="specs/ignore-groups-hasIndices.js"></script>
-  <script src="specs/ignore-groups.js"></script>
+  <script src="specs/regex-pattern-parser.js"></script>
+  <script src="specs/regex-pattern-parser-across-elements.js"></script>
   <style>
     .hide-fixture { display: none; }
   </style>
 </head>
 <body>
  
+<div class="regex-pattern-parser hide-fixture">
+  <p>xxaaaaaaaayyaaaaaaaafzzaaaaaaaabbbbbb(bb\)b[c(p\c/p)c]ddd</p>
+</div>
+
+<div class="regex-pattern-parser-across-elements hide-fixture">
+  <p>xxaaaaaaaayyaaaaaaaafzzaaaaaaaabbbbbb(bb\)b[c(p\c/p)c]ddd</p>
+</div>
+
 <div class="across-elements-separate-groups hide-fixture">
     <h2>Group1 text group2@ text group3</h2><p>Group1 text group2</p>
     <pre>Group1 text text group2
