doc, comments, tests related to ability to mark nesting/overlapping ranges/groups
filterMatch callback, readme

remove filterMatch callback

Update mark.js

--- a/ModuleExamples/Module_ES6.html
+++ b/ModuleExamples/Module_ES6.html
@@ -4,9 +4,8 @@
 <meta charset="utf-8" />
 <title>Module example</title>
 
-<script src="jquery.js"></script>
+<!-- <script type="module" src="mark.es6.js"></script> -->
 <script type="module" src="example.js"></script>
-<script type="module" src="mark.es6.js"></script>
 
 </head>
 <body>
