--- a/ModuleExamples/Module_ES6_jquery.html
+++ b/ModuleExamples/Module_ES6_jquery.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8" />
 <title>jQuery module example</title>
 
-<script src="jquery.js"></script>
+<!-- <script type="module" src="jquery.js"></script>
+<script type="module" src="jquery.mark.es6.js"></script> -->
 <script type="module" src="example_jquery.js"></script>
-<script type="module" src="jquery.mark.es6.js"></script>
 
 </head>
 <body>
