mark() method performance boost with direct use of 'cacheTextNodes' option
direct use:
with 'acrossElements' it requires 'cacheTextNodes' and 'wrapAllRanges' options
without - only 'cacheTextNodes' option

--- a/test/fixtures/across-elements/basic/cache-text-nodes.html
+++ b/test/fixtures/across-elements/basic/cache-text-nodes.html
@@ -1,12 +1,12 @@
 <div class="context">
     <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+        <b>Lo</b>rem <i>ipsum</i> <b>dolor</b> sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+        invidunt ut labore et dolore magna aliquyam erat, sed d<i>ia</i>m voluptua. At vero
         eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est Lorem ipsum dolor sit. Lorem ipsum dolor sit
+        no sea takimata sanctus est Lorem ipsum dolor sit. Lorem ipsum <b>dolor</b> sit
         amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+        ut labore et dolore magna aliquyam erat, sed <i>diam</i> voluptua. At vero eos et
         accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem ipsum dolor sit amet.
+        takimata sanctus est <a href="#">Lorem ipsum</a> dolor sit amet.
     </p>
 </div>
