exported 'createDiacritics()' and fixed name in RegExpCreator modules

--- a/ModuleExamples/regexpcreator.html
+++ b/ModuleExamples/regexpcreator.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>RegExpCreator example</title>
 
-<script type="module" src="regexpcreator.es6.js"></script>
+<!-- <script type="module" src="regexpcreator.es6.js"></script> -->
 <script type="module" src="example_regexpcreator.js"></script>
 
 </head>
