--- a/test/fixtures/across-elements/basic/combine-patterns.html
+++ b/test/fixtures/across-elements/basic/combine-patterns.html
@@ -1,12 +1,4 @@
-<div class="context">
-    <p>
-        <b>Lo</b>rem <i>ipsum</i> <b>dolor</b> sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-        invidunt ut labore et dolore magna aliquyam erat, sed d<i>ia</i>m voluptua. At vero
-        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est Lorem ipsum dolor sit  Lorem ipsum <b>dolor</b> sit
-        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed <i>diam</i> voluptua. At vero eos et
-        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est <a href="#">Lorem ipsum</a> dolor sit amet.
-    </p>
+<div class="diacritics">
+  <p>café , <b>ré</b>sumé , resu<b>mé</b> , exposé , lamé , maté , öre , øre , p<b>ât</b>é , rosé</p>
+  <p>cafe , re<i>sum</i>e , expose , lame , mate , ore , pate , rose</p>
 </div>
