--- a/test/fixtures/basic/combine-patterns.html
+++ b/test/fixtures/basic/combine-patterns.html
@@ -1,12 +1,4 @@
-<div class="context">
-    <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est Lorem ipsum dolor sit. Lorem ipsum dolor sit
-        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
+<div class="diacritics">
+  <p> café , résumé , resumé , exposé , lamé , maté , öre , øre , pâté , rosé </p>
+  <p> cafe , resume , expose , lame , mate , ore , pate , rose </p>
 </div>
