--- a/test/fixtures/across-elements/regexp/block-elements-boundary.html
+++ b/test/fixtures/across-elements/regexp/block-elements-boundary.html
@@ -1,13 +1,13 @@
 <div class="block-elements-boundary">
     <h1><b>Block</b> elements</h1>boundary
-    <h2><b>block elements</b></h2>boundary
     <p>block elements boundary</p>
     <p><span>block <b>elements</b></span></p>boundary
     <p>block elements<br>boundary</p>
     <ul>
-        <li>block<div>elements</div>boundary</li>
-        <li>block<custom>elements</custom>boundary</li>
+        <li>block <s>elements</s> boundary</li>
         <li>block elements</li>
         <li>boundary</li>
     </ul>
+    <p>block elements <my-tag>boundary</my-tag></p>
+    <p><my-tag>block</my-tag> elements boundary</p>
 </div>
