changed filter callback parameter in `markRegExp()` method, test
With 'acrossElements' option, a filter callback parameter that count mark elements is useless. I changed it to count matches.

--- a/test/fixtures/across-elements/regexp/filter.html
+++ b/test/fixtures/across-elements/regexp/filter.html
@@ -1,12 +1,3 @@
 <div class="across-elements-regexp-filter">
-    <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est Lorem ipsum dolor sit. Lorem ipsum dolor sit
-        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
+  <h2>Lorem ipsum do<b>lo</b>r</h2><p><b>L</b>orem ipsum dolor</p><p>Lorem ip<b>su</b>m dolor</p>
 </div>
