--- a/test/fixtures/basic/duplicate-context.html
+++ b/test/fixtures/basic/duplicate-context.html
@@ -15,6 +15,7 @@
         <p>
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            <span>lorem test ipsum</span>
             At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
             gubergren, no sea takimata sanctus est Lorem ipsum dolor sit. Lorem ipsum
             dolor sit amet, test consetetur
