added sorting array by the DOM order in 'domiterator', tests, miscellaneous corrections

--- a/test/fixtures/across-elements/basic/block-elements-boundary.html
+++ b/test/fixtures/across-elements/basic/block-elements-boundary.html
@@ -10,6 +10,7 @@
         <li>boundary</li>
     </ul>
     <p>block elements <custom-tag>boundary</custom-tag></p>  <!--1, 2 -->
+    <div>block<br><p>elements boundary</p></div>
 </div>
 
 <!-- 1 mark across -->
