improvements related mark lines functionality, refactoring
fixed bug in `wrapRangeAcross()` method, fixed handling 'br' element, improvements related mark lines functionality, refactoring to reduce a code size

--- a/test/fixtures/ranges/mark-lines.html
+++ b/test/fixtures/ranges/mark-lines.html
@@ -3,8 +3,7 @@
     three
     four
     five
-    six<br> seven
-  </p>
+    six<br> seven</p>
 </div>
 
 <div class="mark-lines-pre"><pre>
@@ -14,5 +13,5 @@ three
 five
 six<br>seven<br>
 nine
-ten
-</pre></div>
+ten</pre>
+</div>
