--- a/test/fixtures/basic/ignore-punctuation-joiners.html
+++ b/test/fixtures/basic/ignore-punctuation-joiners.html
@@ -1,4 +1,4 @@
-<div class="basic-ignore-punctuation-ignore-joiners">
+<div class="basic-ignore-punctuation-joiners">
     <div>
         <p>
             Lore&#8205;m, i&shy;p‒sum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
@@ -23,6 +23,10 @@
             aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
             dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
             est lorem ipsum dolor sit amet. Lor}&#8205;{em "ipsum". Lorem ip&shy;sum.
+        </p>
+    </div>
+    <div>
+        <p><!--- text is added procedurally -->
         </p>
     </div>
 </div>
