--- a/test/fixtures/basic/wildcards-escaped.html
+++ b/test/fixtures/basic/wildcards-escaped.html
@@ -1,15 +1,4 @@
-<div class="basic-wildcards">
-    <div>
-        <p>
-            Lorenzom ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Loriem ipsum
-            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            Lorm ipsum Lorum ipsum, et Loram ipsum. Lor?m ipsum. Lor*m ipsum. Lorm ipsum.
-
-        </p>
-    </div>
+<div class="wildcards-escaped">
     <div>
         <p>
             Lorenzom ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -21,13 +10,9 @@
         </p>
     </div>
     <div>
-        <p>
-            Lorenzom ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Loriem ipsum
-            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            Lorm ipsum Lorum ipsum, et Loram ipsum. Lor?m ipsum. Lor*m ipsum. Lorm ipsum.
-        </p>
+        <p>Lorem Lorm Lor?m Lor\?m lor\rem ipsum ips\\?um ips\\um dolor dol\\\?m dol\\\um.</p>
+    </div>
+    <div>
+        <p>Lorem Lorm Lor*m Lo\*rem lo\rem ips\\*m ips\um do\\\*or do\\\lor.</p>
     </div>
 </div>
