prepared for releasing v2.4.1

--- a/test/fixtures/basic/wildcards-escaped.html
+++ b/test/fixtures/basic/wildcards-escaped.html
@@ -10,7 +10,7 @@
         </p>
     </div>
     <div>
-        <p>Lorem Lorm Lor?m Lor\?m lor\rem ipsum ips\\?um ips\\um dolor dol\\\?m dol\\\um.</p>
+        <p>Lorem Lorm Lor?m Lor\?m lor\em ipsum ips\\?um ips\\\um dolor dol\\\?m dol\\\um.</p>
     </div>
     <div>
         <p>Lorem Lorm Lor*m Lo\*rem lo\rem ips\\*m ips\um do\\\*or do\\\lor.</p>
