fixed doc searching

--- a/doc-v1/$search.html
+++ b/doc-v1/$search.html
@@ -49,7 +49,7 @@
 
 <div class="search-results">
 <script type="text/javascript" src="data/index.js"></script>
-<script type="text/javascript">PerformSearch();</script>
+<script type="text/javascript">$().performSearch();</script>
 </div>
 
 </article>
