--- a/playground/index.html
+++ b/playground/index.html
@@ -1050,12 +1050,12 @@ otherwise only the custom elements do have boundaries</li>
 <p>Saving tab state to the browser local storage isn't reliable. Save to file important tabs.</p>
 </div></article>
 </main>
-<footer><div class="info">
+<footer>
+<div class="info">
 <span><a href="../doc-v2/index.html" target="_blank">Doc</a></span>
 <span><a href="https://github.com/angezid/advanced-mark.js" target="_blank">advanced-mark.js</a></span>
 <span><a href="https://github.com/angezid/advanced-mark.js-playground" target="_blank">playground</a></span>
 <span>v2</span>
-</div>
-</footer>
+</div></footer>
 <br><br>
 </body></html>
